# NER-MAL-synopses

./: .agent.md  APANHADO_DETALHADO.md  APANHADO_MUDANCAS_CODIGO.md  PLAN.md  README.md  main.py  pyproject.toml  pytorch_to_spacy.ipynb  requirements.txt
data/processed/: entities.jsonl  performance_metrics.json  similarity_pairs.json
data/processed/clean_texts/: MinerU_markdown_AplicaçãoDeEstencilsCompactos_Freire_2025_2047066304108883968.md  MinerU_markdown_Augusto_Damasceno_-_TCC_-_Pub_2047066271707889664.md  clean_texts.jsonl  (+10 more)
data/raw/: animes-0001.json  animes-0002.json  animes-0003.json  animes-0004.json  animes-0005.json  animes-0006.json  animes-0007.json  animes-0008.json  animes-0009.json  animes-0010.json  animes-0011.json  animes-0012.json  animes-0013.json  animes-0014.json  animes-0015.json  animes-0016.json  animes-0017.json  animes-0018.json  animes-0019.json  animes-0020.json  animes-0021.json  animes-0022.json  animes-0023.json  animes-0024.json  animes-0025.json  animes-0026.json  animes-0027.json  animes-0028.json  animes-0029.json  animes-0030.json
notebooks/: graph_ner_pipeline.ipynb
output/: graph.gexf  graph_k_chars.gexf  graph_k_chars_1000.gexf  graph_k_chars_1200.gexf  graph_k_chars_1400.gexf  graph_k_chars_1600.gexf  graph_k_chars_1800.gexf  graph_k_chars_200.gexf  graph_k_chars_2000.gexf  graph_k_chars_400.gexf  graph_k_chars_600.gexf  graph_k_chars_800.gexf  graph_paragraph.gexf  graph_sentence.gexf
scripts/: extract_main_content.py  plot_degree_distributions_seaborn.py
src/: api_mal.py
tests/: test_main.py
(+53 files in other folders)
