[project]
name = "ner-eng-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "idna==3.11",
    "matplotlib==3.8.0",
    "networkx==3.1",
    "pypdf==6.10.0",
    "pytest==8.4.2",
    "spacy>=3.8.13",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "output*", "notebooks*"]
